tests/paczka1/small_fuzzy/10808180.err
Error in line 3: ERGaoOJ S168 0,7
Error in line 1: 6ooTk1RR S168 9,3
Error in line 4: ZH3SjeKJ S168 51,7
